--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,3 +1,9 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-frontend
-#  ...
+FROM node:16.14-alpine
+
+WORKDIR /app-frontend
+
+COPY . .
+
+RUN npm install
+
+CMD ["npm", "start"]
