--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -2,8 +2,10 @@ FROM node:16.14-alpine
 
 WORKDIR /app-frontend
 
-COPY . .
+COPY package*.json ./
 
 RUN npm install
+
+COPY . .
 
 CMD ["npm", "start"]
